--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -12,7 +12,17 @@
             android:id="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/button_text"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/button_text"
+            android:layout_marginStart="28dp" android:layout_marginEnd="28dp"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/filterSpinner" app:layout_constraintEnd_toEndOf="@+id/nextButton"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/imageView"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" android:alpha="0."/>
     <Button
             android:text="Next"
             android:layout_width="wrap_content"
@@ -20,4 +30,21 @@
             android:id="@+id/nextButton" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+            android:text="Prediction"
+            android:layout_width="96dp"
+            android:layout_height="51dp"
+            android:id="@+id/predictedClass" android:textColor="#FFFFFF"
+            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginStart="44dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"/>
+    <SeekBar
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/filterSeekBar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.95" android:max="100"
+            style="@android:style/Widget.Material.SeekBar" android:progressTint="#FFFFFF" android:scaleX="2"
+            android:scaleY="2" android:progress="5" android:paddingLeft="18dip" android:paddingRight="18dip"
+            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
