--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -6,6 +6,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".GalleryActivity" android:background="#222">
+    <TextView
+            android:text="Prediction"
+            android:layout_width="286dp"
+            android:layout_height="50dp"
+            android:id="@+id/predictedClass" android:textColor="#FFFFFF"
+            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginStart="32dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic"
@@ -29,19 +36,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/nextButton" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-    <TextView
-            android:text="Prediction"
-            android:layout_width="286dp"
-            android:layout_height="50dp"
-            android:id="@+id/predictedClass" android:textColor="#FFFFFF"
-            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginStart="44dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent" android:alpha="0"
+            android:scaleX="0" android:scaleY="0"/>
     <SeekBar
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/filterSeekBar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:id="@+id/filterSeekBar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.95" android:max="100"
             style="@android:style/Widget.Material.SeekBar" android:progressTint="#FFFFFF" android:scaleX="2"
