--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -11,43 +11,14 @@
             android:layout_width="286dp"
             android:layout_height="50dp"
             android:id="@+id/predictedClass" android:textColor="#FFFFFF"
-            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginStart="32dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic"
-            android:id="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/button_text"
-            android:layout_marginStart="28dp" android:layout_marginEnd="28dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
+            tools:layout_editor_absoluteX="32dp"/>
     <ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/filterSpinner" app:layout_constraintEnd_toEndOf="@+id/nextButton"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/imageView"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" android:alpha="0."/>
-    <Button
-            android:text="Next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/nextButton" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent" android:alpha="0"
-            android:scaleX="0" android:scaleY="0"/>
-    <SeekBar
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/filterSeekBar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.95" android:max="100"
-            style="@android:style/Widget.Material.SeekBar" android:progressTint="#FFFFFF" android:scaleX="2"
-            android:scaleY="2" android:progress="1" android:paddingLeft="18dip" android:paddingRight="18dip"
-            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
+            android:id="@+id/filterSpinner"
+            android:alpha="0." tools:layout_editor_absoluteY="338dp" tools:layout_editor_absoluteX="8dp"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/gallery_list"/>
